Fixed alignment

--- a/src/main/webapp/css/nav-bar.css
+++ b/src/main/webapp/css/nav-bar.css
@@ -31,7 +31,7 @@ nav .brand{
 
 nav .brand h2{
     margin: 0;
-    padding-top: 10px;
+    padding-top: 15px;
     color: #fff;
 }
 
